--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.control.Tooltip?>
@@ -11,6 +10,7 @@
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
+<?import org.controlsfx.control.textfield.CustomTextField?>
 
 <!--
   ~ Copyright (c) 2019.  Dario Lucia (dario.lucia@gmail.com)
@@ -20,6 +20,7 @@
   ~ shall be granted by the author in writing.
   -->
 
+<?import org.controlsfx.control.textfield.CustomTextField?>
 <TitledPane fx:id="displayTitledPane" collapsible="false" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ModelBrowserViewController">
    <content>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0">
@@ -28,16 +29,11 @@
                <items>
                   <Circle fx:id="serviceHealthStatus" fill="#003915" radius="8.0" stroke="WHITE" strokeType="INSIDE" />
                   <Label text=" " />
-                  <TextField fx:id="filterText" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="180.0">
+                  <CustomTextField fx:id="filterText" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="260.0">
                       <tooltip>
                           <Tooltip text="Text matching with wildcard (*)" />
                       </tooltip>
-                  </TextField>
-                  <Button mnemonicParsing="false" onAction="#filterClearButtonPressed" text="Clear...">
-                      <tooltip>
-                          <Tooltip text="Clear the specified filter" />
-                      </tooltip>
-                  </Button>
+                  </CustomTextField>
                </items>
             </ToolBar>
             <TreeTableView fx:id="modelTree" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" onDragDetected="#onDragDetected" VBox.vgrow="ALWAYS">
