Connector widget and initialisation

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/css/MainView_dark.css
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/css/MainView_dark.css
@@ -113,7 +113,7 @@
     /* A little darker than -fx-base and used as the -fx-color for the
      * "armed" pseudoclass state.
      *
-     * TODO: should this be renamed to -fx-armed-base?
+     *
      * -fx-pressed-base: derive(-fx-base,-6%);
      */
     
@@ -259,7 +259,7 @@
     /* The color to use as -fx-text-fill when painting text on top of
      * backgrounds filled with -fx-selection-bar.
      *
-     * TODO: this can be removed
+     *
      */
     -fx-selection-bar-text: -fx-text-background-color;
 
