--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
@@ -19,51 +19,17 @@
 
 <VBox prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ConnectorStatusWidgetController">
    <children>
-      <HBox style="-fx-background-color: #CCCCCC;" VBox.vgrow="NEVER">
+      <HBox style="-fx-background-color: lightgray;" VBox.vgrow="NEVER">
          <children>
-            <Circle fx:id="statusCircle" fill="#52565b" radius="12.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" HBox.hgrow="NEVER">
+            <Circle fx:id="statusCircle" fill="#52565b" radius="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" HBox.hgrow="NEVER">
                <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                  <Insets bottom="6.0" left="6.0" right="6.0" top="8.0" />
                </HBox.margin>
             </Circle>
             <Label fx:id="nameLbl" maxHeight="24.0" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="0.0" prefHeight="24.0" text="-- Connector name --" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <ImageView fx:id="initImg" fitHeight="24.0" fitWidth="24.0" focusTraversable="true" layoutX="283.0" layoutY="13.0" onMouseClicked="#initButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-         </children>
-      </HBox>
-      <Separator prefWidth="200.0" />
-      <Label fx:id="messageLbl" maxHeight="24.0" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="0.0" prefHeight="24.0" text="-- Connector message --" VBox.vgrow="NEVER">
-         <VBox.margin>
-            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-         </VBox.margin>
-      </Label>
-      <Separator prefWidth="200.0" />
-      <HBox VBox.vgrow="NEVER">
-         <children>
-            <Label fx:id="alarmLbl" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="24.0" prefWidth="100.0" text="Alarm" textAlignment="CENTER" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <Label fx:id="rxLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <Label fx:id="txLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
@@ -84,6 +50,45 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <ImageView fx:id="initImg" fitHeight="24.0" fitWidth="24.0" focusTraversable="true" layoutX="283.0" layoutY="13.0" onMouseClicked="#initButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+         </children>
+      </HBox>
+      <Separator prefWidth="200.0" />
+      <Label fx:id="messageLbl" maxHeight="24.0" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="0.0" prefHeight="24.0" text="-- Connector message --" VBox.vgrow="NEVER">
+         <VBox.margin>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+         </VBox.margin>
+      </Label>
+      <Separator prefWidth="200.0" />
+      <HBox VBox.vgrow="NEVER">
+         <children>
+            <Label fx:id="alarmLbl" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="100.0" prefHeight="24.0" prefWidth="100.0" text="Alarm" textAlignment="CENTER" HBox.hgrow="NEVER">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="rxLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" minWidth="96.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="txLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" minWidth="96.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+            <Label maxWidth="1.7976931348623157E308" prefHeight="24.0" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+            </Label>
          </children>
       </HBox>
    </children>
