--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
@@ -17,10 +17,11 @@
   ~ Right to reproduce, use, modify and distribute (in whole or in part) this library for demonstrations/trainings/study/commercial purposes shall be granted by the author in writing.
   -->
 
+<?import javafx.scene.control.ToolBar?>
 <VBox prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ConnectorStatusWidgetController">
    <children>
-      <HBox style="-fx-background-color: lightgray;" VBox.vgrow="NEVER">
-         <children>
+      <ToolBar maxWidth="1.7976931348623157E308" prefHeight="32.0" VBox.vgrow="NEVER">
+         <items>
             <Circle fx:id="statusCircle" fill="#52565b" radius="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" HBox.hgrow="NEVER">
                <HBox.margin>
                   <Insets bottom="6.0" left="6.0" right="6.0" top="8.0" />
@@ -58,8 +59,8 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-         </children>
-      </HBox>
+         </items>
+      </ToolBar>
       <Separator prefWidth="200.0" />
       <Label fx:id="messageLbl" maxHeight="24.0" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="0.0" prefHeight="24.0" text="-- Connector message --" VBox.vgrow="NEVER">
          <VBox.margin>
