--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/UserDisplayView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/UserDisplayView.fxml
@@ -24,15 +24,13 @@
          <children>
             <ToolBar maxWidth="1.7976931348623157E308" minWidth="1.0" prefHeight="32.0">
                <items>
-                  <Circle fx:id="serviceHealthStatus" fill="#003915" radius="8.0" stroke="WHITE" strokeType="INSIDE" />
-                  <Label text=" " />
-                  <Button mnemonicParsing="false" onAction="#newButtonSelected" text="New" prefHeight="25.0" prefWidth="50.0" />
-                  <MenuButton fx:id="loadBtn" mnemonicParsing="false" text="Load" prefHeight="25.0" prefWidth="50.0" />
+                  <Button mnemonicParsing="false" onAction="#newButtonSelected" text="New" prefHeight="25.0" prefWidth="100.0" />
+                  <Button mnemonicParsing="false" onAction="#closeButtonSelected" text="Close..." prefHeight="25.0" prefWidth="100.0" />
                   <!-- 
                   <MenuButton fx:id="loadMenuBtn" mnemonicParsing="false" text="Load" />
                   <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#saveButtonSelected" text="Save..." />
                    -->
-                  <Button mnemonicParsing="false" onAction="#closeButtonSelected" text="Close..." prefHeight="25.0" prefWidth="50.0" />
+                  <MenuButton fx:id="loadBtn" mnemonicParsing="false" text="Load..." prefHeight="25.0" prefWidth="100.0" />
                </items>
             </ToolBar>
             <TabPane fx:id="tabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
