--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
@@ -23,7 +23,7 @@
 <?import org.controlsfx.control.textfield.CustomTextField?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.MenuItem?>
-<TitledPane fx:id="displayTitledPane" collapsible="false" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ModelBrowserViewController">
+<TitledPane fx:id="displayTitledPane" text="Hierarchical System Model" collapsible="false" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ModelBrowserViewController">
    <content>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0">
          <children>
@@ -38,7 +38,7 @@
             </ToolBar>
             <TreeTableView fx:id="modelTree" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" onDragDetected="#onDragDetected" VBox.vgrow="ALWAYS">
               <columns>
-                <TreeTableColumn fx:id="nameCol" editable="false" prefWidth="230.0" sortable="false" text="Model" />
+                <TreeTableColumn fx:id="nameCol" editable="false" prefWidth="230.0" sortable="false" text="System Entity" />
                 <TreeTableColumn fx:id="statusCol" editable="false" prefWidth="70.0" resizable="false" sortable="false" text="Status" />
               </columns>
               <contextMenu>
