--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
@@ -18,6 +18,8 @@
   -->
 
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.ToggleButton?>
+<?import org.controlsfx.control.ToggleSwitch?>
 <VBox prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ConnectorStatusWidgetController">
    <children>
       <ToolBar maxWidth="1.7976931348623157E308" prefHeight="32.0" VBox.vgrow="NEVER">
@@ -35,7 +37,12 @@
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </Label>
-            <ImageView fx:id="startStopImg" fitHeight="24.0" fitWidth="24.0" focusTraversable="true" onMouseClicked="#startStopButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+            <ToggleSwitch fx:id="startStopSwitch" focusTraversable="true" onMouseClicked="#startStopButtonClicked" HBox.hgrow="NEVER">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin>
+            </ToggleSwitch>
+            <ImageView fx:id="abortImg" focusTraversable="true" onMouseClicked="#abortButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
@@ -43,15 +50,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-            <ImageView fx:id="abortImg" fitHeight="24.0" fitWidth="24.0" focusTraversable="true" onMouseClicked="#abortButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView fx:id="initImg" fitHeight="24.0" fitWidth="24.0" focusTraversable="true" layoutX="283.0" layoutY="13.0" onMouseClicked="#initButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+            <ImageView fx:id="initImg" focusTraversable="true" layoutX="283.0" layoutY="13.0" onMouseClicked="#initButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
