Initial support for SVG based mimics

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
@@ -87,6 +87,7 @@
                           <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="RawDataPerspective.fxml" />
                           <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="AlarmPerspective.fxml" />
                           <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="UserDisplayPerspective.fxml" />
+                          <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="MimicsDisplayPerspective.fxml" />
                           <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="NullPerspective.fxml" />
                       </children>
                   </StackPane>
