--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MimicsSvgView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MimicsSvgView.fxml
@@ -29,6 +29,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Tooltip?>
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.MimicsSvgViewController" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
    <children>
       <ScrollPane fx:id="scrollPane" fitToWidth="true" fitToHeight="true" VBox.vgrow="ALWAYS">
@@ -43,17 +44,6 @@
       <ToolBar prefHeight="24.0" prefWidth="200.0">
          <items>
             <Region HBox.hgrow="ALWAYS" prefHeight="8.0" />
-            <ImageView fx:id="realSizeImage" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#realSizeClick" >
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView fx:id="fitToAreaImage" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#fitToAreaClick">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <Region prefWidth="12.0" />
             <ImageView fx:id="minusZoomImage" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#minusZoomClick">
                <cursor>
                   <Cursor fx:constant="HAND" />
@@ -61,6 +51,17 @@
             </ImageView>
             <Slider fx:id="zoomSlider" majorTickUnit="50.0" max="200.0" minorTickCount="1" prefHeight="16.0" showTickMarks="true" value="100.0" />
             <ImageView fx:id="plusZoomImage" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#plusZoomClick">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <Region prefWidth="12.0" />
+            <ImageView fx:id="realSizeImage" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#realSizeClick" >
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <ImageView fx:id="fitToAreaImage" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#fitToAreaClick">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
